--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -35,6 +35,7 @@
     "vue-hljs": "^1.1.2",
     "vue-input-tag": "^2.0.6",
     "vue-ins-progress-bar": "^1.3.0",
+    "vue-loading-overlay": "^3.3.2",
     "vue-maskedinput": "^0.1.3",
     "vue-notification": "^1.3.20",
     "vue-nvd3": "^1.0.0",
@@ -45,6 +46,7 @@
     "vue-sparklines": "^0.2.1",
     "vue-sweetalert2": "^3.0.1",
     "vue2-daterange-picker": "^0.4.0",
+    "vue2-dropzone": "^3.6.0",
     "vue2-google-maps": "^0.10.7",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.4.0"
