--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0",
+        "pusher/pusher-php-server": "^4.1",
         "sentry/sentry-laravel": "^1.8",
         "spatie/laravel-permission": "^3.13"
     },
