--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "coderello/laravel-passport-social-grant": "^3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "kreait/laravel-firebase": "^2.2",
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.3",
+        "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
         "pusher/pusher-php-server": "^4.1",
         "sentry/sentry-laravel": "^1.8",
