--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "color-admin",
-  "version": "0.0.0",
+  "name": "venki-dashboard",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,13 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@agametov/vueditor": "^0.4.1",
     "@chenfengyuan/vue-countdown": "^1.1.4",
-    "apexcharts": "^3.12.0",
+    "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.2",
     "bootstrap-social": "^5.1.1",
-    "bootstrap-vue": "^2.1.0",
+    "bootstrap-vue": "^2.16.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.2",
     "flag-icon-css": "^3.4.5",
@@ -23,27 +22,27 @@
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
-    "simple-line-icons": "^2.4.1",
+    "simple-line-icons": "^2.5.5",
     "v-autocomplete": "^1.8.2",
-    "vue": "^2.6.11",
-    "vue-apexcharts": "^1.5.1",
+    "vue": "^2.6.12",
+    "vue-apexcharts": "^1.6.0",
     "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-chartjs": "^3.5.0",
     "vue-custom-scrollbar": "^1.1.0",
     "vue-event-calendar": "^1.5.2",
     "vue-full-calendar": "^2.7.0",
-    "vue-good-table": "^2.18.1",
+    "vue-good-table": "^2.21.0",
     "vue-hljs": "^1.1.2",
     "vue-input-tag": "^2.0.6",
     "vue-ins-progress-bar": "^1.3.0",
-    "vue-loading-overlay": "^3.3.2",
+    "vue-loading-overlay": "^3.3.3",
     "vue-maskedinput": "^0.1.3",
     "vue-notification": "^1.3.20",
     "vue-nvd3": "^1.0.0",
     "vue-pop-colorpicker": "^1.0.2",
-    "vue-router": "^3.1.3",
-    "vue-select": "^3.4.0",
-    "vue-slider-component": "^3.1.0",
+    "vue-router": "^3.4.3",
+    "vue-select": "^3.10.8",
+    "vue-slider-component": "^3.2.5",
     "vue-sparklines": "^0.2.1",
     "vue-sweetalert2": "^3.0.1",
     "vue2-daterange-picker": "^0.4.0",
@@ -53,15 +52,16 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
-    "@vue/cli-plugin-router": "^4.4.6",
-    "@vue/cli-plugin-vuex": "^4.4.6",
-    "@vue/cli-service": "^4.1.2",
+    "@vue/cli-plugin-babel": "^4.5.4",
+    "@vue/cli-plugin-eslint": "^4.5.4",
+    "@vue/cli-plugin-router": "^4.5.4",
+    "@vue/cli-plugin-vuex": "^4.5.4",
+    "@vue/cli-service": "^4.5.4",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "prettier": "2.0.5",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
