--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -33,6 +33,7 @@
     "vue-full-calendar": "^2.7.0",
     "vue-good-table": "^2.21.0",
     "vue-hljs": "^1.1.2",
+    "vue-infinite-loading": "^2.4.5",
     "vue-input-tag": "^2.0.6",
     "vue-ins-progress-bar": "^1.3.0",
     "vue-loading-overlay": "^3.3.3",
