--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,8 +15,9 @@
     "bootstrap": "^4.5.2",
     "bootstrap-social": "^5.1.1",
     "bootstrap-vue": "^2.16.0",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.2",
+    "epayco-sdk-node": "^1.0.7",
     "flag-icon-css": "^3.4.5",
     "ionicons": "^4.6.3",
     "moment": "^2.27.0",
@@ -27,7 +28,7 @@
     "vue": "^2.6.12",
     "vue-apexcharts": "^1.6.0",
     "vue-bootstrap-datetimepicker": "^5.0.1",
-    "vue-chartjs": "^3.5.0",
+    "vue-chartjs": "^3.5.1",
     "vue-custom-scrollbar": "^1.1.0",
     "vue-event-calendar": "^1.5.2",
     "vue-full-calendar": "^2.7.0",
