--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -37,6 +37,7 @@
     "vue-infinite-loading": "^2.4.5",
     "vue-input-tag": "^2.0.6",
     "vue-ins-progress-bar": "^1.3.0",
+    "vue-json-excel": "^0.3.0",
     "vue-loading-overlay": "^3.3.3",
     "vue-maskedinput": "^0.1.3",
     "vue-notification": "^1.3.20",
